# move_with_noexcept

./: CMakeLists.txt  README.md
noexcept_move/: Person.h  SimplePerson.h  defnoexcept.h  noexcept_move.cpp
